Improving buttons styles, fixing somes alignment and format elements

--- a/pages/scss/custom.scss
+++ b/pages/scss/custom.scss
@@ -64,6 +64,7 @@ $font-size-base: 1rem;
   --color-secondary-raised: var(--eureka-purple-dark);
   --color-emphasis: #f5a623;
   --color-emphasis-raised: #fca719;
+  --color-danger: #E3506D;
   --text-color-primary: #333;
   --text-color-secondary: #555;
   --text-color-light: #f7f7f7;
@@ -234,6 +235,13 @@ hr {
 .btn-outline-primary:hover {
   background-color: var(--color-primary-raised);
   border-color: var(--color-primary-raised);
+}
+.btn-warning:hover {
+ background-color: var(--color-danger);
+}
+.btn-warning:focus {
+  box-shadow: none;
+  
 }
 
 .top-50{
